--- a/Верстка/assets/css/Homepage.css
+++ b/Верстка/assets/css/Homepage.css
@@ -18,6 +18,30 @@ body {
   padding: 20px 0 0 0;
   background: radial-gradient(83.15% 154.4% at 10% 13.52%, #1E212C 0%, #232441 56.38%, #1E212C 100%);
 }
+.header__img__1 {
+  position: absolute;
+  margin: 257px 0 0 245px;
+}
+.header__img__2 {
+  position: absolute;
+  margin: 680px 0 0 948px;
+}
+.header__img__3 {
+  position: absolute;
+  margin: 64px 0 0 0;
+}
+.header__img__4 {
+  position: absolute;
+  margin: 94px 0 0 943px;
+}
+.header__img__5 {
+  position: absolute;
+  margin: 290px 0 0 1140px;
+}
+.header__img__6 {
+  position: absolute;
+  margin: 105px 0 0 1753px;
+}
 .header__content {
   width: 1230px;
   margin: 0 auto;
