--- a/Верстка/assets/scss/Homepage.scss
+++ b/Верстка/assets/scss/Homepage.scss
@@ -343,64 +343,159 @@ body{
         }
 
         &__worflow{
-            margin: 60px 0 0 0;
-
-            &__title{
-                width: 390px;
-                font-family: Lato;
-                font-weight: 700;
-                font-size: 28px;
-                color: #1E212C;
-                line-height: 42px;
-            }
+            margin: 60px 0 83px 0;
 
             &__content{
+                display: flex;
 
-                &__points{
-                    margin: 24px 0 0 0;
+                &__text{
 
-                    &__point{
-                        height: 26px;
-                        margin: 12px 0 0 0;
+                    &__title{
+                        width: 390px;
+                        font-family: Lato;
+                        font-weight: 700;
+                        font-size: 28px;
+                        color: #1E212C;
+                        line-height: 42px;
+                    }
+                
+                    &__points{
+                        margin: 24px 0 0 0;
+
+                        &__point{
+                            height: 26px;
+                            margin: 12px 0 0 0;
+                            display: flex;
+                            align-items: center;
+
+                            p{
+                                margin-left: 12px;
+                                font-family: Lato;
+                                color: #424551;
+                            }
+                        }
+                    }
+
+                    &__buttons{
+                        width: 328px;
+                        margin: 48px 0 0 0;
                         display: flex;
-                        align-items: center;
+                        justify-content: space-between;
 
-                        p{
-                            margin-left: 12px;
+                        &__more{
+                            width: 140px;
+                            height: 44px;
+                            border: 1px solid #7772F1;
+                            background: none;
+                            border-radius: 4px;
                             font-family: Lato;
+                            font-weight: 700;
+                            font-size: 14px;
+                            color: #7772F1;
+                        }
+
+                        &__try{
+                            width: 166px;
+                            height: 44px;
+                            border: none;
+                            background-color: #7772F1;
+                            border-radius: 4px;
+                            color: white;
+                            font-family: Lato;
+                            font-size: 14px;
+                            font-weight: 700;
                         }
                     }
                 }
 
-                &__buttons{
-                    width: 328px;
-                    margin: 48px 0 0 0;
+                &__img{
+                    margin: 0 0 0 143px;
+                }
+            }
+        }
+    }
+}
+
+.analysis{
+    height: 556px;
+    background-color: #1E212C;
+    padding: 80px 0 0 345px;
+
+    &__background{
+        position: absolute;
+        margin: 50px 0 0 1389px;
+    }
+
+    &__content{
+        width: 1230px;
+        display: flex;
+        justify-content: space-between;
+
+        &__text{
+
+            &__title{
+                height: 60px;
+                font-family: Lato;
+                font-size: 46px;
+                font-weight: 900px;
+                color: white;
+            }
+
+            &__inputs{
+                margin: 74px 0 0 0;
+                input{
+                    height: 52px;
+                    background-color: #FFFFFF1F;
+                    border: 1px solid #FFFFFF33;
+                    border-radius: 4px;
+                }
+
+                &__two{
+                    width: 600px;
                     display: flex;
                     justify-content: space-between;
-
-                    &__more{
-                        width: 140px;
-                        height: 44px;
-                        border: 1px solid #7772F1;
-                        background: none;
-                        border-radius: 4px;
-                        font-family: Lato;
-                        font-weight: 700;
-                        font-size: 14px;
-                        color: #7772F1;
+                    input{
+                        width: 285px;
                     }
+                }
 
-                    &__try{
-                        width: 166px;
-                        height: 44px;
-                        border: none;
-                        background-color: #7772F1;
-                        border-radius: 4px;
+                &__one{
+                    input{
+                        width: 600px;
+                        margin: 58px 0 0 0;
+                    }
+                }
+            }
+
+            &__sending{
+                width: 600px;
+                display: flex;
+                justify-content: space-between;
+                margin: 48px 0 0 0;
+
+                &__agree{
+                    width: 315px;
+                    display: flex;
+                    align-items: baseline;
+
+                    p{
+                        margin: 0 0 0 12px;
+                        font-family: Lato;
+                        line-height: 25.6px;
                         color: white;
-                        font-family: Lato;
-                        font-size: 14px;
-                        font-weight: 700;
                     }
+                }
+
+                &__btn{
+                    width: 220px;
+                    height: 52px;
+                    background-color: #7772F1;
+                    border: none;
+                    border-radius: 4px;
+                    font-weight: 700;
+                    font-size: 16px;
+                    letter-spacing: 0.5px;
+                    color: white;
                 }
             }
         }
