--- a/Верстка/assets/scss/Homepage.scss
+++ b/Верстка/assets/scss/Homepage.scss
@@ -1,5 +1,5 @@
 // Подключение шрифтов
-@font-face {
+@font-face{
     font-family: Lato;
     src: url(../fonts/Lato-Regular.ttf);
 }
@@ -57,6 +57,7 @@ body{
         display: flex;
         align-items: center;
 
+        // Стили для навигации
         nav{
             width: 500px;
             display: flex;
@@ -103,7 +104,7 @@ body{
                 width: 810px;
                 font-size: 72px;
                 font-family: Lato;
-                font-weight: 900;
+                font-weight: 700;
                 letter-spacing: 1px;
                 color: white;
 
@@ -171,6 +172,7 @@ body{
     }
 }
 
+// Стили для блока с информацией об агенстве
 .info{
     padding: 120px 0 0 345px;
     
@@ -224,6 +226,7 @@ body{
     }
 }
 
+// Стили для блока с описанием агенства
 .agency{
     margin: 39px 0 0 0;
     &__background{
@@ -282,6 +285,7 @@ body{
         }
     }
 
+    // Стили для блока с достижениями
     &__achievement{
         width: 736px;
         margin: 180px 0 0 592px;
@@ -306,6 +310,7 @@ body{
         }
     }
 
+    // Стили для блока с сервисами
     &__ourServices{
         width: 1315px;
         margin: 0 auto;
@@ -315,7 +320,7 @@ body{
             text-align: center;
             font-family: Lato;
             font-size: 46px;
-            font-weight: 900;
+            font-weight: 700;
             color: #1E212C;
         }
 
@@ -416,6 +421,7 @@ body{
     }
 }
 
+// Стили для блока с анализом
 .analysis{
     height: 556px;
     background-color: #1E212C;
@@ -437,7 +443,7 @@ body{
                 height: 60px;
                 font-family: Lato;
                 font-size: 46px;
-                font-weight: 900px;
+                font-weight: 700px;
                 color: white;
             }
 
@@ -502,6 +508,7 @@ body{
     }
 }
 
+// Стили для блока с вопросами
 .questions{
     height: 806px;
 
@@ -518,7 +525,7 @@ body{
             width: 600px;
             &__title{
                 font-family: Lato;
-                font-weight: 900;
+                font-weight: 700;
                 font-size: 46px;
                 color: #1E212C;
                 line-height: 59.8px;
@@ -577,3 +584,648 @@ body{
     }
 }
 
+// Стили для блока с кейсами
+.case{
+    height: 782px;
+    background-color: #F4F5F6;
+    padding: 80px 0 0 345px;
+
+    &__arrows{
+        width: 84px;
+        position: absolute;
+        margin: 24px 0 0 1160px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    &__title{
+        font-family: Lato;
+        font-weight: 700;
+        font-size: 46px;
+        line-height: 59.8px;
+        color: #1E212C;
+    }
+
+    &__cards{
+        width: 1230px;
+        display: flex;
+        justify-content: space-between;
+        margin: 60px 0 0 0;
+
+        img{
+            width: 390px;
+            height: 390px;
+        }
+    }
+
+    &__moreCase{
+        width: 600px;
+        display: flex;
+        justify-content: space-between;
+        margin: 60px 0 0 315px;
+        font-family: Lato;
+        font-size: 28px;
+        font-weight: 700;
+        color: #1E212C;
+        align-items: center;
+
+        &__btn{
+            width: 237px;
+            height: 52px;
+            background-color: #7772F1;
+            border: none;
+            border-radius: 4px;
+            color: white;
+            letter-spacing: 0.5px;
+            font-family: Lato;
+            font-weight: 700;
+        }
+    }
+}
+
+// Стили для блока с преимуществами
+.ourBenefits{
+    padding: 100px 0 0 0;
+
+    &__background{
+        img{
+            position: absolute;
+        }
+        img:nth-of-type(1){
+            margin: 700px 0 0 0;
+        }
+        img:nth-of-type(2){
+            margin: 550px 0 0 1200px;
+        }
+    }
+
+    &__content{
+        width: 1230px;
+        margin-left: 345px;
+
+        &__title{
+            font-family: Lato;
+            font-weight: 700;
+            font-size: 46px;
+            text-align: center;
+            color: #1E212C;
+        }
+
+        &__cards{
+            width: 1230px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin: 34px 0 0 0;
+
+            &__wrapper{
+
+                &__card{
+                    width: 390px;
+                    height: 237px;
+                    border: 1px solid #E5E8ED;
+                    margin: 24px 0 0 0;
+                    padding: 40px 0 0 48px;
+
+                    img:nth-of-type(1){
+                        margin: 0 0 0 127px;
+                    }
+
+                    p{
+                        width: 294px;
+                        font-family: Lato;
+                        text-align: center;
+                    }
+                    p:nth-of-type(1){
+                        font-weight: 700;
+                        font-size: 20px;
+                        color: #1E212C;
+                        line-height: 30px;
+                        margin: 16px 0 0 0;
+                    }
+                    p:nth-of-type(2){
+                        font-size: 14px;
+                        color: #787A80;
+                        line-height: 21px;
+                        margin: 8px 0 0 0;
+                    }
+
+                    &__cursor{
+                        position: absolute;
+                        margin: 150px 0 0 127px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+// Стили для блока с тарифами
+.plans{
+    width: 1230px;
+    margin: 180px 0 0 345px;
+
+    &__title{
+        font-family: Lato;
+        font-size: 46px;
+        font-weight: 700;
+        color: #1E212C;
+        text-align: center;
+    }
+
+    &__switch{
+        width: 390px;
+        height: 46px;
+        margin: 60px 0 0 420px;
+
+        button{
+            width: 210px;
+            height: 46px;
+            font-family: Lato;
+            font-weight: 700;
+        }
+
+        button:nth-of-type(1){
+            border-radius: 40px;
+            border: none;
+            background-color: #7772F1;
+            color: white;
+            position: absolute;
+            z-index: 2;
+        }
+
+        button:nth-of-type(2){
+            border-radius: 0 40px 40px 0;
+            border: none;
+            color: white;
+            position: absolute;
+            margin: 0 0 0 180px;
+            border: 1px solid #7772F1;
+            background: none;
+            color: #7772F1;
+            z-index: 1;
+        }
+    }
+
+    &__cards{
+        margin: 60px 0 0 0;
+        display: flex;
+        justify-content: space-between;
+        
+        &__card{
+            width: 390px;
+            height: 536px;
+            padding: 40px 0 40px 0;
+            border: 1px solid #7772F166;
+            border-radius: 4px;
+            background-color: white;
+            position: relative;
+
+            &__title{
+                width: 388px;
+                height: 42px;
+                font-family: Lato;
+                font-weight: 700;
+                font-size: 28px;
+                line-height: 42px;
+                text-align: center;
+                color: #1E212C;
+            }
+
+            &__price{
+                height: 60px;
+                display: flex;
+                margin: 8px 0 0 127px;
+                color: #7772F1;
+                font-family: Lato;
+                p:nth-of-type(1){
+                    width: 81px;
+                    height: 60px;
+                    font-weight: 700;
+                    font-size: 46px;
+                }
+                p:nth-of-type(2){
+                    font-weight: 700;
+                    font-size: 20px;
+                    line-height: 30px;
+                    margin: 0 0 0 8px;
+                }
+            }
+            hr{
+                border: 1px solid #DADBDD;
+                margin: 16px 0 0 0;
+            }
+
+            &__items{
+                margin: 24px 0 0 100px;
+
+                &__item__plus{
+                    height: 26px;
+                    display: flex;
+                    align-items: center;
+                    margin: 8px 0 0 0;
+
+                    p{
+                        font-family: Lato;
+                        color: #1E212C;
+                        margin: 0 0 0 8px;
+                    }
+                }
+
+                &__item__plus2{
+                    height: 26px;
+                    display: flex;
+                    align-items: center;
+                    margin: 8px 0 0 0;
+
+                    p{
+                        font-family: Lato;
+                        color: white;
+                        margin: 0 0 0 8px;
+                    }
+                }
+
+                &__item__minus{
+                    height: 26px;
+                    display: flex;
+                    align-items: center;
+                    margin: 8px 0 0 0;
+
+                    p{
+                        font-family: Lato;
+                        color: #9A9CA5;
+                        margin: 0 0 0 8px;
+                    }
+                }
+            }
+
+            &__btn{
+                width: 146px;
+                height: 44px;
+                margin: 32px 0 0 122px;
+                border: 1px solid #7772F1;
+                border-radius: 4px;
+                background: none;
+                color: #7772F1;
+                font-weight: 700;
+                font-size: 14px;
+                font-family: Lato;
+                letter-spacing: 0.5px;
+            }
+
+            &__btn2{
+                width: 146px;
+                height: 44px;
+                margin: 32px 0 0 122px;
+                border-radius: 4px;
+                border: none;
+                background-color: #7772F1;
+                color: white;
+                font-weight: 700;
+                font-size: 14px;
+                font-family: Lato;
+                letter-spacing: 0.5px;
+            }
+        }
+
+        &__card:nth-of-type(2){
+            background-color: #1E212C;
+            border: 1px solid #03CEA4;
+        }
+    }
+}
+
+// Стили для блока с комментариями
+.clientSay{
+    margin: 180px 0 0 0;
+
+    &__background{
+        position: absolute;
+        margin: 60px 0 0 450px;
+    }
+
+    &__title{
+        font-family: Lato;
+        font-size: 46px;
+        font-weight: 700;
+        color: #1E212C;
+        text-align: center;
+    }
+
+    &__comment{
+        width: 1242px;
+        position: relative;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin: 60px 0 0 345px;
+
+        &__cursor{
+            position: absolute;
+            margin: 47px 0 0 1215px;
+        }
+
+        &__card{
+            width: 1020px;
+            height: 344px;
+            background-color: white;
+            padding: 64px 0 0 105px;
+            display: flex;
+
+            &__text{
+                width: 752px;
+                height: 120px;
+                margin: 0 0 0 30px;
+                font-family: Lato;
+                font-size: 20px;
+                line-height: 30px;
+                color: #424551;
+
+                &__profile{
+                    width: 243px;
+                    height: 72px;
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                    margin: 24px 0 0 0;
+
+                    &__info{
+                        width: 151px;
+                        height: 50px;
+
+                        p:nth-of-type(1){
+                            line-height: 26px;
+                            font-size: 16px;
+                            font-weight: 700;
+                            color: #1E212C;
+                        }
+
+                        p:nth-of-type(2){
+                            margin: 4px 0 0 0;
+                            line-height: 20px;
+                            font-size: 14px;
+                            color: #787A80;
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+// Стили для блока с комментариями
+.latestNews{
+
+    &__background{
+        position: absolute;
+        margin: 125px 0 0 0;
+    }
+
+    &__content{
+        width: 1230px;
+        height: 507px;
+        margin: 180px 0 180px 345px;
+        display: flex;
+        justify-content: space-between;
+
+        &__text{
+            margin: 0 105px 0 0;
+            p{
+                font-family: Lato;
+            }
+            p:nth-of-type(1){
+                font-size: 46px;
+                font-weight: 700;
+                line-height: 59.8px;
+                color: #1E212C;
+            }
+            p:nth-of-type(2){
+                width: 285px;
+                font-size: 20px;
+                line-height: 30px;
+                margin: 40px 0 0 0;
+                color: #424551;
+            }
+
+            &__btn{
+                width: 180px;
+                height: 52px;
+                font-family: Lato;
+                letter-spacing: 0.5px;
+                background-color: #7772F1;
+                color: white;
+                border: none;
+                border-radius: 4px;
+                margin: 60px 0 0 0;
+            }
+        }
+
+        &__card{
+            width: 390px;
+            height: 507px;
+
+            &__info{
+                height: 21px;
+                display: flex;
+                align-items: center;
+                color: #787A80;
+                font-size: 14px;
+                font-family: Lato;
+                margin: 16px 0 0 0;
+
+                &__date{
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+
+                    p{
+                        margin: 0 0 0 8px;
+                    }
+                }
+
+                &__profile{
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+
+                    p{
+                        margin: 0 0 0 8px;
+                    }
+                }
+
+                hr{
+                    height: 12px;
+                    border: 1px solid #787A80;
+                    margin: 0 12px;
+                }
+            }
+
+            &__title{
+                width: 390px;
+                height: 60px;
+                font-family: Lato;
+                font-size: 20px;
+                font-weight: 700;
+                line-height: 30px;
+                color: #1E212C;
+                margin: 8px 0 0 0;
+            }
+
+            &__text{
+                width: 390px;
+                height: 52px;
+                line-height: 25.6px;
+                font-family: Lato;
+                color: #424551;
+                margin: 8px 0 0 0;
+            }
+
+            &__readMore{
+                width: 110px;
+                height: 26px;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                font-family: Lato;
+                font-weight: 700;
+                color: #1E212C;
+                margin: 16px 0 0 0;
+            }
+        }
+    }
+}
+
+// Стили для подвала
+.footer{
+    width: 1920px;
+    height: 515px;
+    background-color: #1E212C;
+    padding: 80px 0 0 0;
+
+    &__content{
+
+        &__basic{
+            display: flex;
+            justify-content: space-between;
+            margin: 0 345px 0 345px;
+
+            &__logo{
+                width: 281px;
+
+                p{
+                    font-family: Lato;
+                    font-size: 12px;
+                    color: white;
+                    line-height: 18px;
+                    margin: 24px 0 0 0;
+                    opacity: 0.6;
+                }
+
+                &__icons{
+                    width: 156px;
+                    display: flex;
+                    justify-content: space-between;
+                    margin: 38px 0 0 0;
+                }
+            }
+
+            &__columns{
+                font-family: Lato;
+                color: white;
+
+                &__title{
+                    height: 24px;
+                    font-weight: 700;
+                    letter-spacing: 1px;
+                }
+
+                &__items{
+                    margin: 12px 0 0 0;
+
+                    p{
+                        height: 26px;
+                        margin: 8px 0 0 0;
+                        opacity: 0.6;
+                    }
+
+                    &__item{
+                        display: flex;
+                        align-items: center;
+
+                        img{
+                            margin: 0 8px 0 0;
+                        }
+                    }
+                }
+
+                input{
+                    width: 286px;
+                    height: 36px;
+                    background-color: #FFFFFF1F;
+                    border: 1px solid #FFFFFF33;
+                    border-radius: 4px;
+                    background: url(../img/Right_\(2\).png) no-repeat center right;
+                    padding: 0 12px 0 0;
+                    margin: 24px 0 0 0;
+                }
+
+                &__explanation{
+                    width: 286px;
+                    font-family: Lato;
+                    font-size: 10px;
+                    line-height: 15px;
+                    margin: 12px 0 0 0;
+                }
+            }
+        }
+
+        hr{
+            border: 1px solid #DADBDD;
+            margin: 60px 0 0 0;
+        }
+
+        &__partners{
+            margin: 40px 0 0 345px;
+            display: flex;
+
+            &__cards{
+                width: 552px;
+                height: 40px;
+                display: flex;
+                justify-content: space-between;
+            }
+
+            &__top{
+                width: 130px;
+                height: 40px;
+                display: flex;
+                justify-content: space-between;
+                align-items: baseline;
+                font-family: Lato;
+                font-size: 14px;
+                color: white;
+                margin: 0 0 0 550px;
+            }
+        }
+
+        &__copyright{
+            width: 1920px;
+            height: 50px;
+            padding: 16px 0 0 345px;
+            background-color: #FFFFFF1F;
+            margin: 40px 0 0 0;
+            
+            &__content{
+                width: 285px;
+                height: 18px;
+                display: flex;
+                justify-content: space-between;
+                font-family: Lato;
+                font-size: 12px;
+                color: white;
+                align-items: center;
+            }
+        }
+    }
+}
