--- a/Верстка/assets/css/Homepage.css
+++ b/Верстка/assets/css/Homepage.css
@@ -370,7 +370,7 @@ body {
   height: 60px;
   font-family: Lato;
   font-size: 46px;
-  font-weight: 700px;
+  font-weight: 700;
   color: white;
 }
 .analysis__content__text__inputs {
