--- a/Верстка/assets/scss/Homepage.scss
+++ b/Верстка/assets/scss/Homepage.scss
@@ -443,7 +443,7 @@ body{
                 height: 60px;
                 font-family: Lato;
                 font-size: 46px;
-                font-weight: 700px;
+                font-weight: 700;
                 color: white;
             }
 
